# HoneyDew

./: .gitcode-ci.yml  .gitignore  CMakeLists.txt  README.md  main.c  makefile
.gitee/pipelines/: build.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: compile-cross-platform.yml
docs/: audit_pipeline.mmd  connection_lifecycle.mmd  generate_png.py  http_fsm.mmd  ssh_fsm.mmd  system_architecture.mmd
include/: audit.h  config.h  connection.h  dispatcher.h  finite_state.h  logger.h  session.h  state.h
src/service/: dispatcher.c  dns_honeypot.c  finite_state.c  ftp_honeypot.c  honeypots.c  imap_honeypot.c  mysql_honeypot.c  pop3_honeypot.c  postgresql_honeypot.c  questdb_honeypot.c  redis_honeypot.c  session.c  smtp_honeypot.c  ssh_honeypot.c  telnet_honeypot.c
src/utilities/: audit.c  logger.c
